fixed hero being misaligned on index, removed old wrapper styling

--- a/src/css/imports/layout.css
+++ b/src/css/imports/layout.css
@@ -4,18 +4,6 @@ html {
 
 .wrapper {
   margin: 0 2.4rem 0 4.8rem;
-  @media (--medium) {
-    max-width: 50rem;
-    margin: auto;
-  }
-  @media (--large) {
-    max-width: 75rem;
-    margin: auto;
-  }
-  @media (--xlarge) {
-    max-width: 100rem;
-    margin: auto;
-  }
 }
 
 .logo {
@@ -31,11 +19,12 @@ html {
   flex-direction: column;
   justify-content: center;
   height: 80vh;
-  padding-top: 20vh;
+  padding: 20vh 0 0 0;
 }
 
 .hero--index {
   height: 100vh;
+  padding: 0;
 }
 
 .hero__details {
@@ -46,6 +35,7 @@ html {
 .logotype {
   position: fixed;
   text-transform: uppercase;
+  font-family: var(--sans-medium);
   margin: 2.4rem;
   font-size: 2.4rem;
 }
@@ -70,7 +60,6 @@ header {
 /*TODO: NAV BURGER*/
 nav {
   float: right;
-  display: none;
 }
 
 section {
@@ -87,6 +76,10 @@ section {
 
 .content__thumb {
   padding: 0 0 0.8rem 0;
+}
+
+.content__link--arrow::after {
+  content: " \203A";
 }
 
 img {
